--- a/index.html
+++ b/index.html
@@ -70,21 +70,26 @@ section h2 {
   padding-bottom:4px; 
 }
 
-/* Boxes */
+/* Boxes with gradient hover */
 .features, .videos, .resources { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:25px; }
 .box {
-  background: #fff;
+  background: linear-gradient(145deg, #e3f2fd, #bbdefb);
   padding:20px;
   border-radius:15px;
   box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
   display:flex;
   flex-direction:column;
   justify-content:space-between;
   position:relative;
 }
-.box:hover { transform: translateY(-6px); box-shadow: 0 12px 30px rgba(0,0,0,0.15); }
-.box h3 { color:#0d47a1; margin-bottom:10px; font-size:1.2rem; }
+.box:hover { 
+  transform: translateY(-6px); 
+  box-shadow: 0 12px 30px rgba(0,0,0,0.2); 
+  background: linear-gradient(145deg, #bbdefb, #90caf9);
+}
+.box h3 { color:#0d47a1; margin-bottom:10px; font-size:1.2rem; transition: color 0.3s ease; }
+.box:hover h3 { color:#0b3d91; }
 .box p { flex-grow:1; margin-bottom:12px; color:#444; font-size:0.95rem; }
 .box a.button {
   background-color:#1976d2;
@@ -296,6 +301,7 @@ addVideoBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
