--- a/index.html
+++ b/index.html
@@ -59,6 +59,48 @@ header img { height:130px; width:auto; border-radius:12px; border:3px solid #197
 header div h1 { font-size:2.4rem; color:#0d47a1; margin-bottom:8px; }
 header div p { font-size:1.2rem; color:#555; }
 
+
+  /* Header */
+header {
+  display:flex;
+  align-items:center;
+  gap:30px;
+  margin-bottom:40px;
+  flex-wrap:wrap;
+  padding:20px 30px;
+  border-radius:15px;
+  background: linear-gradient(135deg, #2196f3, #64b5f6);
+  color: #fff;
+  box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+  border: 2px solid #1976d2;
+}
+header img {
+  height:140px;
+  width:auto;
+  border-radius:12px;
+  border:3px solid #fff;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+}
+header div h1 {
+  font-size:2.8rem;
+  color:#fff;
+  margin-bottom:8px;
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+}
+header div p {
+  font-size:1.3rem;
+  color:#e0f7fa;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+}
+
+/* Responsive */
+@media(max-width:992px){
+  header { justify-content:center; text-align:center; padding:15px 20px; }
+  header div h1 { font-size:2.2rem; }
+  header div p { font-size:1.1rem; }
+  header img { height:120px; }
+}
+
 /* Sections */
 section { margin-bottom:50px; }
 section h2 { 
@@ -301,6 +343,7 @@ addVideoBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
