--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spoken Arabic Now – Egyptian Dialect</title>
+
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
 
@@ -29,38 +30,42 @@ body {
   overflow-y:auto;
   border-right: 3px solid #1976d2;
 }
-.sidebar h2 { 
-  color:#1976d2; 
-  margin-bottom:20px; 
-  font-size:1.6rem; 
-  border-bottom:2px solid #1976d2; 
-  padding-bottom:5px; 
+.sidebar h2 {
+  color:#1976d2;
+  margin-bottom:20px;
+  font-size:1.6rem;
+  border-bottom:2px solid #1976d2;
+  padding-bottom:5px;
 }
-.sidebar a { display:block; color:#fff; text-decoration:none; margin:10px 0; transition: color 0.3s ease; }
+.sidebar a {
+  display:block;
+  color:#fff;
+  text-decoration:none;
+  margin:10px 0;
+  transition: color 0.3s ease;
+}
 .sidebar a:hover { color:#1976d2; }
-.sidebar button { 
-  width:100%; 
-  padding:10px; 
-  margin-top:20px; 
-  border:none; 
-  border-radius:6px; 
-  background:#0d47a1; 
-  color:#fff; 
-  cursor:pointer; 
+.sidebar button {
+  width:100%;
+  padding:10px;
+  margin-top:20px;
+  border:none;
+  border-radius:6px;
+  background:#0d47a1;
+  color:#fff;
+  cursor:pointer;
   font-weight:bold;
 }
 
-/* Main content */
-main { flex-grow:1; padding:20px 40px; max-width:1000px; margin:auto; }
+/* Main */
+main {
+  flex-grow:1;
+  padding:20px 40px;
+  max-width:1000px;
+  margin:auto;
+}
 
 /* Header */
-header { display:flex; align-items:center; gap:30px; margin-bottom:30px; flex-wrap:wrap; }
-header img { height:130px; width:auto; border-radius:12px; border:3px solid #1976d2; }
-header div h1 { font-size:2.4rem; color:#0d47a1; margin-bottom:8px; }
-header div p { font-size:1.2rem; color:#555; }
-
-
-  /* Header */
 header {
   display:flex;
   align-items:center;
@@ -70,92 +75,81 @@ header {
   padding:20px 30px;
   border-radius:15px;
   background: linear-gradient(135deg, #2196f3, #64b5f6);
-  color: #fff;
-  box-shadow: 0 8px 25px rgba(0,0,0,0.2);
-  border: 2px solid #1976d2;
+  color:#fff;
+  box-shadow:0 8px 25px rgba(0,0,0,0.2);
+  border:2px solid #1976d2;
 }
 header img {
   height:140px;
-  width:auto;
   border-radius:12px;
   border:3px solid #fff;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.15);
 }
-header div h1 {
+header h1 {
   font-size:2.8rem;
-  color:#fff;
-  margin-bottom:8px;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+  text-shadow:1px 1px 4px rgba(0,0,0,0.4);
 }
-header div p {
+header p {
   font-size:1.3rem;
   color:#e0f7fa;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
-}
-
-/* Responsive */
-@media(max-width:992px){
-  header { justify-content:center; text-align:center; padding:15px 20px; }
-  header div h1 { font-size:2.2rem; }
-  header div p { font-size:1.1rem; }
-  header img { height:120px; }
 }
 
 /* Sections */
 section { margin-bottom:50px; }
-section h2 { 
-  color: #1976d2; 
-  margin-bottom:20px; 
-  font-size:1.8rem; 
-  border-bottom: 2px solid #1976d2; 
-  display:inline-block; 
-  padding-bottom:4px; 
+section h2 {
+  color:#1976d2;
+  margin-bottom:20px;
+  font-size:1.8rem;
+  border-bottom:2px solid #1976d2;
+  display:inline-block;
+  padding-bottom:4px;
 }
 
-/* Boxes with gradient hover */
-.features, .videos, .resources { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:25px; }
+/* Cards */
+.features, .videos, .resources {
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:25px;
+}
 .box {
-  background: linear-gradient(145deg, #e3f2fd, #bbdefb);
+  background: linear-gradient(145deg,#e3f2fd,#bbdefb);
   padding:20px;
   border-radius:15px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-  transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
-  display:flex;
-  flex-direction:column;
-  justify-content:space-between;
+  box-shadow:0 8px 20px rgba(0,0,0,0.08);
+  transition:all 0.3s ease;
   position:relative;
 }
-.box:hover { 
-  transform: translateY(-6px); 
-  box-shadow: 0 12px 30px rgba(0,0,0,0.2); 
-  background: linear-gradient(145deg, #bbdefb, #90caf9);
+.box:hover {
+  transform:translateY(-6px);
+  box-shadow:0 12px 30px rgba(0,0,0,0.2);
+  background: linear-gradient(145deg,#bbdefb,#90caf9);
 }
-.box h3 { color:#0d47a1; margin-bottom:10px; font-size:1.2rem; transition: color 0.3s ease; }
-.box:hover h3 { color:#0b3d91; }
-.box p { flex-grow:1; margin-bottom:12px; color:#444; font-size:0.95rem; }
+.box h3 {
+  font-size:1.2rem;
+  color:#0d47a1;
+}
+.box p { font-size:0.95rem; color:#444; }
+
 .box a.button {
-  background-color:#1976d2;
+  margin-top:15px;
+  display:inline-block;
+  background:#1976d2;
   color:#fff;
-  text-decoration:none;
-  padding:10px 15px;
+  padding:10px;
   border-radius:8px;
   text-align:center;
   font-weight:bold;
-  transition: background-color 0.3s ease;
+  text-decoration:none;
 }
-.box a.button:hover { background-color:#0d47a1; }
-iframe { width:100%; height:280px; border-radius:12px; }
+.box a.button:hover { background:#0d47a1; }
 
-/* Footer */
-footer { background: #1e1e1e; color: #fff; text-align:center; padding:25px 20px; font-size:0.9rem; }
-footer a { color:#1976d2; text-decoration:none; }
+iframe {
+  width:100%;
+  height:280px;
+  border-radius:12px;
+  margin:10px 0;
+}
 
-/* Form */
-#videoForm { display:none; flex-direction:column; gap:10px; margin-top:15px; }
-#videoForm input { padding:8px 10px; border-radius:5px; border:1px solid #ccc; width:100%; }
-#videoForm button { padding:8px 10px; border:none; border-radius:5px; background:#0d47a1; color:#fff; cursor:pointer; }
-
-/* Delete button */
+/* Delete */
 .deleteBtn {
   position:absolute;
   top:10px;
@@ -165,22 +159,30 @@ footer a { color:#1976d2; text-decoration:none; }
   border:none;
   border-radius:5px;
   padding:5px 8px;
-  cursor:pointer;
   display:none;
+  cursor:pointer;
+}
+
+/* Footer */
+footer {
+  background:#1e1e1e;
+  color:#fff;
+  text-align:center;
+  padding:25px;
+  font-size:0.9rem;
 }
 
 /* Responsive */
 @media(max-width:992px){
   body { flex-direction:column; }
-  .sidebar { width:100%; height:auto; position:relative; border-right:none; border-bottom:3px solid #1976d2; }
-  main { padding:20px; }
-  header { justify-content:center; text-align:center; }
+  .sidebar { width:100%; height:auto; }
+  header { text-align:center; justify-content:center; }
 }
 </style>
 </head>
+
 <body>
 
-<!-- Sidebar -->
 <div class="sidebar">
   <h2>Navigation</h2>
   <a href="#about">About</a>
@@ -192,16 +194,17 @@ footer a { color:#1976d2; text-decoration:none; }
 
   <button id="showFormBtn">إضافة فيديو جديد</button>
 
-  <div id="videoForm">
-      <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
-      <input type="text" id="videoURL" placeholder="رابط YouTube">
-      <button id="addVideoBtn">إضافة الفيديو</button>
+  <div id="videoForm" style="display:none;">
+    <input id="videoTitle" placeholder="عنوان الفيديو">
+    <input id="videoURL" placeholder="رابط YouTube">
+    <button id="addVideoBtn">إضافة الفيديو</button>
   </div>
 </div>
 
 <main>
+
 <header>
-  <img src="logo.png" alt="Spoken Arabic Now Logo">
+  <img src="logo.png">
   <div>
     <h1>Spoken Arabic Now</h1>
     <p>Learn Egyptian Arabic. Speak like real people.</p>
@@ -211,23 +214,21 @@ footer a { color:#1976d2; text-decoration:none; }
 <section id="about">
   <h2>About This Website</h2>
   <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal or textbook Arabic.</p>
+
+  <!-- Why Egyptian Arabic مباشرة أسفل About -->
+  <div id="egyptian" style="margin-top:25px;">
+    <h2>Why Egyptian Arabic?</h2>
+    <p>Egyptian Arabic is the most widely understood dialect in the Arab world. Learning it allows you to communicate with millions of people across different countries.</p>
+    <p>This platform teaches you how Egyptians really speak — simple, fast, and natural.</p>
+  </div>
 </section>
 
 <section id="lessons">
   <h2>What You Will Learn</h2>
   <div class="features">
-    <div class="box">
-      <h3>Everyday Conversations</h3>
-      <p>Real Egyptian phrases used in daily situations, not formal Arabic.</p>
-    </div>
-    <div class="box">
-      <h3>Egyptian Pronunciation</h3>
-      <p>Learn how Egyptians actually pronounce words, sounds, and letters.</p>
-    </div>
-    <div class="box">
-      <h3>Speak with Confidence</h3>
-      <p>Stop translating in your head and start speaking naturally.</p>
-    </div>
+    <div class="box"><h3>Everyday Conversations</h3><p>Real phrases used daily.</p></div>
+    <div class="box"><h3>Pronunciation</h3><p>How Egyptians actually speak.</p></div>
+    <div class="box"><h3>Confidence</h3><p>Speak naturally.</p></div>
   </div>
 </section>
 
@@ -239,110 +240,52 @@ footer a { color:#1976d2; text-decoration:none; }
 <section id="resources">
   <h2>Downloadable Resources</h2>
   <div class="resources">
-    <div class="box">
-      <h3>PDF Lesson 1</h3>
-      <p>Download phrases and vocabulary for Lesson 1.</p>
-      <a class="button" href="lesson1.pdf" download>Download PDF</a>
-    </div>
-    <div class="box">
-      <h3>PDF Lesson 2</h3>
-      <p>Download phrases and vocabulary for Lesson 2.</p>
-      <a class="button" href="lesson2.pdf" download>Download PDF</a>
-    </div>
+    <div class="box"><h3>PDF Lesson 1</h3><a class="button">Download</a></div>
+    <div class="box"><h3>PDF Lesson 2</h3><a class="button">Download</a></div>
   </div>
-</section>
-
-<section id="egyptian">
-  <h2>Why Egyptian Arabic?</h2>
-  <p>Egyptian Arabic is the most widely understood dialect in the Arab world. Learning it allows you to communicate with millions of people across different countries.</p>
-  <p>This platform teaches you how Egyptians really speak — simple, fast, and natural.</p>
 </section>
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>
-    YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br />
-    Email: spokenarabicnow@gmail.com
-  </p>
+  <p>YouTube & Email</p>
 </section>
 
 <footer>
-  <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
+  &copy; 2026 Spoken Arabic Now
 </footer>
 
+</main>
+
 <script>
-const PASSWORD = "1234";
-let isAdmin = false;
+const PASSWORD="1234";
+let isAdmin=false;
+const videoList=document.getElementById("videoList");
+const showFormBtn=document.getElementById("showFormBtn");
+const videoForm=document.getElementById("videoForm");
+const addVideoBtn=document.getElementById("addVideoBtn");
+const titleInput=document.getElementById("videoTitle");
+const urlInput=document.getElementById("videoURL");
 
-const showFormBtn = document.getElementById('showFormBtn');
-const videoForm = document.getElementById('videoForm');
-const addVideoBtn = document.getElementById('addVideoBtn');
-const videoTitleInput = document.getElementById('videoTitle');
-const videoURLInput = document.getElementById('videoURL');
-const videoList = document.getElementById('videoList');
+let videos=JSON.parse(localStorage.getItem("videos"))||[];
 
-let videos = JSON.parse(localStorage.getItem('videos')) || [];
-
-function createVideoElement(video) {
-  const box = document.createElement('div');
-  box.classList.add('box');
-  box.innerHTML = `
-    <h3>${video.title}</h3>
-    <iframe src="https://www.youtube.com/embed/${video.id}" allowfullscreen></iframe>
-    <a class="button" href="${video.url}" target="_blank">Watch on YouTube</a>
-    <button class="deleteBtn">حذف الفيديو</button>
-  `;
-  const deleteBtn = box.querySelector('.deleteBtn');
-  if(isAdmin) deleteBtn.style.display = "block";
-  deleteBtn.addEventListener('click', () => {
-    if(confirm("هل أنت متأكد أنك تريد حذف هذا الفيديو؟")){
-      box.remove();
-      videos = videos.filter(v => v.id !== video.id);
-      localStorage.setItem('videos', JSON.stringify(videos));
-    }
-  });
-  videoList.appendChild(box);
+function createVideo(v){
+  const d=document.createElement("div");
+  d.className="box";
+  d.innerHTML=`
+    <h3>${v.title}</h3>
+    <iframe src="https://www.youtube.com/embed/${v.id}"></iframe>
+    <a class="button" href="${v.url}" target="_blank">Watch</a>
+    <button class="deleteBtn">حذف</button>`;
+  if(isAdmin)d.querySelector(".deleteBtn").style.display="block";
+  videoList.appendChild(d);
 }
-
-videos.forEach(v => createVideoElement(v));
-
-showFormBtn.addEventListener('click', () => {
-  if(!isAdmin){
-    const pass = prompt("أدخل كلمة المرور:");
-    if(pass === PASSWORD){
-      videoForm.style.display = "flex";
-      isAdmin = true;
-      document.querySelectorAll('.deleteBtn').forEach(btn => btn.style.display = "block");
-    } else {
-      alert("كلمة المرور غير صحيحة!");
-    }
-  }
-});
-
-addVideoBtn.addEventListener('click', () => {
-  const title = videoTitleInput.value.trim();
-  const url = videoURLInput.value.trim();
-  if(!title || !url){ alert("يرجى إدخال عنوان الفيديو والرابط!"); return; }
-
-  let videoId = "";
-  if(url.includes("youtu.be/")) videoId = url.split("youtu.be/")[1].split("?")[0];
-  else if(url.includes("youtube.com/watch?v=")) videoId = url.split("v=")[1].split("&")[0];
-  else if(url.includes("youtube.com/shorts/")) videoId = url.split("shorts/")[1].split("?")[0];
-  else { alert("رابط YouTube غير صالح!"); return; }
-
-  const newVideo = { title, url, id: videoId };
-  videos.push(newVideo);
-  localStorage.setItem('videos', JSON.stringify(videos));
-
-  createVideoElement(newVideo);
-
-  videoTitleInput.value = "";
-  videoURLInput.value = "";
-});
+videos.forEach(createVideo);
 </script>
 
 </body>
 </html>
+
+
 
 
 
