--- a/index.html
+++ b/index.html
@@ -247,7 +247,10 @@ footer {
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>YouTube & Email</p>
+  <p>
+    YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br />
+    Email: spokenarabicnow@gmail.com
+  </p>
 </section>
 
 <footer>
@@ -284,6 +287,7 @@ videos.forEach(createVideo);
 
 </body>
 </html>
+
 
 
 
